Updated relative image path for About section

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,6 +6,6 @@
         Hi, my name is Gurveer. I am currently completing my third coop term at HSBC Global Banking & Markets in Toronto. I began my full time studies are based on Software Engineering (BEng) at Carleton University in 2015. I will be graduating in April 2020.
       </p>
     </div>
-    <img class="info-about--image animated" src="../../assets/images/me.png">
+    <img class="info-about--image animated" src="src/assets/images/me.png">
   </div>
 </div>
