Update image path for experience section

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -7,7 +7,7 @@
         <div class="info-experience--hsbc animated">
           <div class="info-experience--image col-md-4">
             <a target="_blank" rel="noopener noreferrer" href="https://www.about.hsbc.ca/">
-              <img  class="col image" src="../../assets/images/hsbc-logo.png">
+              <img  class="col image" src="assets/images/hsbc-logo.png">
             </a>
           </div>
           <div class="info-experience--description col-md-7">
@@ -20,7 +20,7 @@
         <div class="info-experience--hoc animated">
           <div class="info-experience--image col-md-4">
             <a target="_blank" rel="noopener noreferrer" href="http://www.ourcommons.ca/en/about-the-house">
-              <img class="col image" src="../../assets/images/hoc-logo.png">
+              <img class="col image" src="assets/images/hoc-logo.png">
             </a>
           </div>
           <div class="info-experience--description col-md-7">
@@ -33,7 +33,7 @@
         <div class="info-experience--nrc animated">
           <div class="info-experience--image col-md-4">
             <a target="_blank" rel="noopener noreferrer" href="https://www.nrc-cnrc.gc.ca/eng/about/index.html">
-              <img class="col image" src="../../assets/images/nrc-logo.png">
+              <img class="col image" src="assets/images/nrc-logo.png">
             </a>
           </div>
           <div class="info-experience--description col-md-7">
