--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <ul class="nav navbar-nav">
       <li><a href="#about">ABOUT</a></li>
       <li><a href="#experience">EXPERIENCE</a></li>
-      <li><a href="#experience">SKILLS</a></li>
+      <li><a href="#skills">SKILLS</a></li>
       <li><a href="#contact">CONTACT</a></li>
     </ul>
   </div>
