--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,7 +3,7 @@
     <h1 class="info-skills--header animated">Skills</h1>
     <div class="info-skills--content col-md-9 animated">
       <p>
-        Most of my area of expertise is front-end development. HTML, CSS, JS (ES6) building small and medium web apps, and frameworks like React. I have some experience with using Node.js.
+        Most of my area of expertise is front-end development. HTML, CSS, JS (ES6) building small and medium web apps, and frameworks like React. I am currently learning Node.js.
       </p>
     </div>
 
