Update bio, experience

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
     <h1 class="info-about--header animated">About me</h1>
     <div class="info-about--description col-md-9 animated">
       <p>
-        Hi, my name is Gurveer. I am currently completing my third coop term at HSBC Global Banking & Markets in Toronto. I began my full time studies are based on Software Engineering (BEng) at Carleton University in 2015. I will be graduating in April 2020.
+        Hi, my name is Gurveer. I am currently completing my fourth coop term at RBC Amplify as a developer. I began my full time studies based on Software Engineering (BEng) at Carleton University in 2015. I will be graduating in April 2020.
       </p>
     </div>
     <img class="info-about--image animated" src="assets/images/me.png">
