--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -4,6 +4,19 @@
     <h2 class="info-experience--subheader animated delay-1s">Here's what I've done so far...</h2>
     <div class="info-experience--content col-md-9 col-md-offset-3">
       <div class="row">
+        <div class="info-experience--rbc animated">
+          <div class="info-experience--image col-md-4">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.rbc.com/about-rbc.html">
+              <img  class="col image" src="assets/images/rbc-logo.png">
+            </a>
+          </div>
+          <div class="info-experience--description col-md-7">
+            <h1 class="info-experience--job">RBC</h1>
+            <h2 class="info-experience--position">Developer (Amplify), May 2018 - Dec 2018</h2>
+            <h3 class="info-experience--location">Toronto, ON</h3>
+            <p class="info-experience--description">Developer for Amplify 2019 program</p>
+          </div>
+        </div>
         <div class="info-experience--hsbc animated">
           <div class="info-experience--image col-md-4">
             <a target="_blank" rel="noopener noreferrer" href="https://www.about.hsbc.ca/">
