--- a/src/app/experience/experience.component.less
+++ b/src/app/experience/experience.component.less
@@ -1,8 +1,9 @@
 .experience {
-    background-color: #71b3a7;
+    background-color: #D08770;
     padding: 5%;
 
     .info-experience--content {
+        padding-left: 70px;
         .info-experience--job {
             margin-top: 10px;
             font-family: 'Lato', sans-serif;
@@ -42,7 +43,7 @@
         width: 30%;
         height: auto;
         filter: brightness(95%);
-        margin-bottom: 30px;
+        margin-bottom: 60px;
     }
 
     .image:hover{
