--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -12,9 +12,9 @@
           </div>
           <div class="info-experience--description col-md-7">
             <h1 class="info-experience--job">RBC</h1>
-            <h2 class="info-experience--position">Developer (Amplify), May 2018 - Dec 2018</h2>
+            <h2 class="info-experience--position">Developer (Amplify), May 2018 - August 2018</h2>
             <h3 class="info-experience--location">Toronto, ON</h3>
-            <p class="info-experience--description">Developer for Amplify 2019 program</p>
+            <p class="info-experience--description"></p>
           </div>
         </div>
         <div class="info-experience--hsbc animated">
