--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,7 +3,7 @@
     <h1 class="info-skills--header animated">Skills</h1>
     <div class="info-skills--content col-md-9 animated">
       <p>
-        Most of my area of expertise is front-end development. HTML, CSS, JS (ES6) building small and medium web apps, and frameworks like React. I am currently learning Node.js.
+        Most of my area of expertise is front-end development. HTML, CSS, JS (ES6) building small and medium web apps, and frameworks like React.
       </p>
     </div>
 
@@ -12,6 +12,7 @@
       <i class="info-skills--icon devicon-html5-plain-wordmark colored"></i>
       <i class="info-skills--icon devicon-javascript-plain colored"></i>
       <i class="info-skills--icon devicon-jquery-plain-wordmark colored"></i>
+      <i class="info-skills--icon devicon-angularjs-plain colored"></i>
       <i class="info-skills--icon devicon-react-original colored"></i>
       <i class="info-skills--icon devicon-css3-plain-wordmark colored"></i>
       <i class="info-skills--icon devicon-less-plain-wordmark colored"></i>
@@ -30,6 +31,12 @@
       <h1 class="info-skills--subheader">Other</h1>
       <i class="info-skills--icon devicon-git-plain-wordmark colored"></i>
       <i class="info-skills--icon devicon-webpack-plain colored"></i>
+    </div>
+
+    <div class="info-skills--learning animated">
+      <h1 class="info-skills--subheader">Learning</h1>
+      <i class="info-skills--icon devicon-vim-plain colored"></i>
+      <i class="info-skills--icon devicon-amazonwebservices-original colored"></i>
     </div>
   </div>
 </div>
